# Solana-Trading-Bot

./: .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE.md  README.md  setup.sh
bot/: Cargo.toml
bot/src/: error_handling.rs  jito_integration.rs  main.rs  monitoring.rs  price_feed.rs  telegram_bot.rs  telegram_commands.rs  trading_strategy.rs  trading_strategy_test.rs
bot/src/strategies/: momentum.rs
programs/trading-program/: Cargo.toml
programs/trading-program/src/: lib.rs
