[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.27.0"
solana-sdk = "1.14"
solana-client = "1.14"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
pyth-sdk-solana = "0.7.0"
jito-block-engine = "0.1.0"
bytemuck = "1.13"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15" 